# s3-specs

./: .gitignore  AUTHORS  README.md  params.example.yaml  params.yaml  params_br-ne1.yaml  params_br-se1.yaml  pyproject.toml  run-spec.sh
.github/workflows/: manual-test.yml  pull-request-test.yml  run-tests.yml  run_tests.yml
docs/: acl_test.py  big_objects_test.py  bucket_acl_test.py  cold_storage_test.py  configure_profiles.py  conftest.py  glossary.md  index.md  list-buckets.ipynb  list-buckets.py  list-buckets_params_br-ne1.md  list-buckets_params_br-se1.md  list-buckets_test.py  locking_cli_test.py  locking_test.py  multiple_objects_test.py  object_acl_test.py  placeholder-test.ipynb  placeholder-test.md  policies_test.py  presigned-urls_test.py  profiles_policies_test.py  s3_helpers.py  test_acl.py  test_policies.py  test_versioning.py  unique-bucket-name.ipynb  unique-bucket-name.py  unique-bucket-name_params_br-ne1.md  unique-bucket-name_params_br-se1.md  unique-bucket-name_test.py  versioning_cli_test.py  versioning_test.py
docs/.ipynb_checkpoints/: placeholder-test-checkpoint.md
docs/runs/: list-buckets_params_br-ne1.md  list-buckets_params_br-se1.md  list-buckets_test_br-ne1.md  list-buckets_test_br-se1.md  list-buckets_test_params_br-ne1.md  list-buckets_test_params_br-se1.md  locking_cli_test_aws-east-1.md  locking_test_aws-east-1.md  locking_test_aws-west-1.md  presigned-urls_test_aws-west-1.md  presigned-urls_test_br-ne1.md  presigned-urls_test_params_br-ne1.md  presigned-urls_test_params_br-se1.md  unique-bucket-name_params_br-ne1.md  unique-bucket-name_params_br-se1.md  unique-bucket-name_test_aws-east-1.md  unique-bucket-name_test_aws-west-1.md  unique-bucket-name_test_br-ne1.md  unique-bucket-name_test_br-se1.md  unique-bucket-name_test_params_br-ne1.md  unique-bucket-name_test_params_br-se1.md
docs/runs/.ipynb_checkpoints/: list-buckets_test_params_br-se1-checkpoint.md  unique-bucket-name_test_params_br-se1-checkpoint.md
docs/utils/: crud.py  utils.py
params/: aws-east-1.yaml  aws-west-1.yaml  br-ne1.yaml  br-se1.yaml
