[tool.poetry]
name = "s3-specs"
version = "0.1.0"
description = ""
authors = ["Marmotitude and AUTHORS <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.scripts]
post_install = "python -m ipykernel install --user --name=my-poetry-env --display-name 'Python (Poetry)'"

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.2.2"
ipykernel = "^6.29.5"
nbconvert = "^7.16.4"
papermill = "^2.6.0"
boto3 = "^1.35.48"
uuid = "^1.30"
jupytext = "^1.16.4"
pytest = "^8.3.3"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.jupytext]
formats = "ipynb,py:light"

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning:botocore.auth"
