[project]
authors = [
    {name = "Marmotitude and AUTHORS", email = "you@example.com"},
]
requires-python = "<4.0,>=3.12"
dependencies = [
    "boto3<2.0.0,>=1.35.48",
    "uuid<2.0,>=1.30",
    "pytest<9.0.0,>=8.3.3",
    "requests<3.0.0,>=2.32.3",
    "ipynbname<2025.0.0.0,>=2024.1.0.0",
    "pytest-env<2.0.0,>=1.1.5",
    "pytest-rerunfailures<16.0,>=15.0",
    "pytest-xdist<4.0.0,>=3.6.1",
    "pytest-repeat<1.0.0,>=0.9.3",
]
name = "s3-specs"
version = "0.1.0"
description = ""
readme = "README.md"
package-mode = false

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupytext>=1.16.5",
    "nbconvert>=7.16.4",
]

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.jupytext]
formats = "ipynb,py:light"

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning:botocore.auth"
env = ["JUPYTER_PLATFORM_DIRS=1"]
markers = [
    "acl: Canned ACL (access control list)",
    "locking: Bucket Lock configuration and Object lock retention",
    "policy: Bucket Policy",
    "cold_storage: Storage Classes",
    "basic: Basic S3 functionality",
    "presign: Presigned URLs",
    "bucket_versioning: Bucket Versioning",
    "cli: Tests using CLI",
    "multiple_objects: Tests involving operations with multiple objects on the same bucket",
    "rapid: quick expected execution magnitude",
    "regular: regular time expected execution magnitude",
    "slow: slow expected execution magnitude",
]
